Make XGBoost 3.x compatible (device=cuda), update requirements.txt

--- a/notebooks/volatility_nowcasting.ipynb
+++ b/notebooks/volatility_nowcasting.ipynb
@@ -865,6 +865,7 @@
     }
    ],
    "source": [
+    "# --- XGBoost training/eval (XGBoost 3.x: use device=\"cuda\" instead of gpu_hist) ---\n",
     "import xgboost as xgb\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "from scipy.stats import spearmanr\n",
@@ -874,6 +875,8 @@
     "    ya = None if b is None else np.asarray(b.values, np.float32)\n",
     "    return xgb.DMatrix(Xa, label=ya, feature_names=list(A.columns))\n",
     "\n",
+    "USE_GPU = torch.cuda.is_available()  # True if a CUDA GPU (e.g., T4) is attached\n",
+    "\n",
     "params = {\n",
     "    \"objective\": \"reg:squarederror\",\n",
     "    \"eval_metric\": \"rmse\",\n",
@@ -882,9 +885,11 @@
     "    \"subsample\": 0.8,\n",
     "    \"colsample_bytree\": 0.8,\n",
     "    \"seed\": SEED,\n",
-    "    \"tree_method\": \"gpu_hist\" if use_gpu else \"hist\",\n",
-    "    \"predictor\":   \"gpu_predictor\" if use_gpu else \"auto\",\n",
+    "    \"tree_method\": \"hist\",                   # unified tree method\n",
+    "    \"device\": \"cuda\" if USE_GPU else \"cpu\",  # key change for XGBoost >= 2.0/3.x\n",
+    "    # no \"predictor\" needed in 3.x\n",
     "}\n",
+    "\n",
     "VAL_WIN = int(CFG[\"inner_val_days\"])\n",
     "\n",
     "oof = np.full(len(X), np.nan, dtype=np.float32)\n",
@@ -904,30 +909,33 @@
     "        early_stopping_rounds=150,\n",
     "        verbose_eval=False,\n",
     "    )\n",
-    "    oof[te] = bst.predict(dmat(X.iloc[te]), iteration_range=(0, bst.best_iteration+1)).astype(np.float32)\n",
-    "    models.append(bst)\n",
-    "    best_iters.append(int(bst.best_iteration))\n",
-    "    print(f\"[Fold {k}] rounds={bst.best_iteration}  te={len(te)}\")\n",
+    "    best_it = int(getattr(bst, \"best_iteration\", 0))\n",
+    "    oof[te] = bst.predict(\n",
+    "        dmat(X.iloc[te]),\n",
+    "        iteration_range=(0, best_it + 1)\n",
+    "    ).astype(np.float32)\n",
     "\n",
-    "# --- Version-safe metrics (handles older scikit-learn) ---\n",
+    "    models.append(bst)\n",
+    "    best_iters.append(best_it)\n",
+    "    print(f\"[Fold {k}] rounds={best_it}  te={len(te)}\")\n",
+    "\n",
+    "# --- Metrics ---\n",
     "mask = np.isfinite(oof)\n",
     "y_m  = y[mask]\n",
     "p_m  = oof[mask]\n",
     "\n",
     "R2 = r2_score(y_m, p_m)\n",
-    "\n",
     "try:\n",
     "    RMSE = mean_squared_error(y_m, p_m, squared=False)\n",
     "except TypeError:\n",
     "    RMSE = float(np.sqrt(mean_squared_error(y_m, p_m)))\n",
-    "\n",
     "MAE = mean_absolute_error(y_m, p_m)\n",
     "IC  = spearmanr(y_m, p_m, nan_policy=\"omit\").correlation\n",
     "\n",
     "print(f\"\\nOOF on {target_name}:\")\n",
     "print(f\"  R²={R2:.3f}   RMSE={RMSE:.6f}   MAE={MAE:.6f}   Spearman(IC)={IC:.3f}   n={mask.sum():,}\")\n",
     "\n",
-    "# interpretable last prediction → annualized vol\n",
+    "# Interpretable last prediction → annualized vol\n",
     "last_pred = float(p_m[-1])\n",
     "rvH_pred = math.expm1(last_pred) if CFG[\"log1p_target\"] else last_pred\n",
     "sigma_daily = np.sqrt(max(rvH_pred, 0.0) / H)\n",
@@ -1188,9 +1196,11 @@
     }
    ],
    "source": [
+    "# --- Tech vs Tech+News vs News-only (XGBoost 3.x compatible) ---\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import r2_score\n",
     "from scipy.stats import spearmanr\n",
+    "import xgboost as xgb\n",
     "\n",
     "tech_feats = [\"ret_1\",\"ret_5\",\"ret_21\",\"vol_5\",\"vol_21\",\"range\"]\n",
     "news_feats = [c for c in X_cols if c not in tech_feats]\n",
@@ -1207,31 +1217,49 @@
     "        v0 = max(tr[0], tr_end - val_win)\n",
     "        tr_core = np.arange(tr[0], v0)\n",
     "        va_in   = np.arange(v0, tr_end)\n",
-    "        bst = xgb.train(params, dmat(Xmat.iloc[tr_core], y.iloc[tr_core]),\n",
-    "                        num_boost_round=3000,\n",
-    "                        evals=[(dmat(Xmat.iloc[va_in], y.iloc[va_in]), \"valid\")],\n",
-    "                        early_stopping_rounds=150, verbose_eval=False)\n",
-    "        preds[te] = bst.predict(dmat(Xmat.iloc[te]), iteration_range=(0, bst.best_iteration+1))\n",
+    "\n",
+    "        bst = xgb.train(\n",
+    "            params,\n",
+    "            dmat(Xmat.iloc[tr_core], y.iloc[tr_core]),\n",
+    "            num_boost_round=3000,\n",
+    "            evals=[(dmat(Xmat.iloc[va_in], y.iloc[va_in]), \"valid\")],\n",
+    "            early_stopping_rounds=150,\n",
+    "            verbose_eval=False,\n",
+    "        )\n",
+    "        best_it = int(getattr(bst, \"best_iteration\", 0))\n",
+    "        preds[te] = bst.predict(\n",
+    "            dmat(Xmat.iloc[te]),\n",
+    "            iteration_range=(0, best_it + 1)\n",
+    "        ).astype(np.float32)\n",
     "    return preds\n",
     "\n",
+    "# XGBoost 3.x: use unified \"hist\" and select device explicitly\n",
+    "USE_GPU = torch.cuda.is_available()\n",
     "params_ab = {\n",
-    "    \"objective\":\"reg:squarederror\",\"eval_metric\":\"rmse\",\n",
-    "    \"eta\":0.05,\"max_depth\":6,\"subsample\":0.8,\"colsample_bytree\":0.8,\n",
-    "    \"seed\": SEED, \"tree_method\":\"gpu_hist\" if use_gpu else \"hist\",\n",
-    "    \"predictor\": \"gpu_predictor\" if use_gpu else \"auto\",\n",
+    "    \"objective\": \"reg:squarederror\",\n",
+    "    \"eval_metric\": \"rmse\",\n",
+    "    \"eta\": 0.05,\n",
+    "    \"max_depth\": 6,\n",
+    "    \"subsample\": 0.8,\n",
+    "    \"colsample_bytree\": 0.8,\n",
+    "    \"seed\": SEED,\n",
+    "    \"tree_method\": \"hist\",\n",
+    "    \"device\": \"cuda\" if USE_GPU else \"cpu\",   # <- replaces old \"gpu_hist\"/\"gpu_predictor\"\n",
     "}\n",
     "\n",
     "X_tech  = build_X(tech_feats)\n",
     "X_full  = build_X(X_cols)\n",
     "X_news  = build_X(news_feats)   # <-- News-only\n",
     "\n",
-    "oof_t   = pooled_oof_preds(X_tech, y, splits, params_ab, val_win=int(CFG[\"inner_val_days\"]))\n",
-    "oof_f   = pooled_oof_preds(X_full, y, splits, params_ab, val_win=int(CFG[\"inner_val_days\"]))\n",
-    "oof_news= pooled_oof_preds(X_news, y, splits, params_ab, val_win=int(CFG[\"inner_val_days\"]))\n",
+    "VAL_WIN = int(CFG[\"inner_val_days\"])\n",
+    "oof_t    = pooled_oof_preds(X_tech,  y, splits, params_ab, val_win=VAL_WIN)\n",
+    "oof_f    = pooled_oof_preds(X_full,  y, splits, params_ab, val_win=VAL_WIN)\n",
+    "oof_news = pooled_oof_preds(X_news,  y, splits, params_ab, val_win=VAL_WIN)\n",
     "\n",
     "msk_tf = np.isfinite(oof_t) & np.isfinite(oof_f)\n",
     "r2_t = r2_score(y[msk_tf], oof_t[msk_tf]); r2_f = r2_score(y[msk_tf], oof_f[msk_tf])\n",
-    "ic_t = spearmanr(y[msk_tf], oof_t[msk_tf]).correlation; ic_f = spearmanr(y[msk_tf], oof_f[msk_tf]).correlation\n",
+    "ic_t = spearmanr(y[msk_tf], oof_t[msk_tf]).correlation\n",
+    "ic_f = spearmanr(y[msk_tf], oof_f[msk_tf]).correlation\n",
     "print(f\"OOF R² — Tech: {r2_t:.3f} | Tech+News: {r2_f:.3f}  Δ={r2_f-r2_t:+.3f}\")\n",
     "print(f\"OOF IC — Tech: {ic_t:.3f} | Tech+News: {ic_f:.3f}  Δ={ic_f-ic_t:+.3f}\")\n",
     "\n",
@@ -1256,9 +1284,9 @@
     "rv5H  = rv1.rolling(5*H).sum()\n",
     "rv21H = rv1.rolling(21*H).sum()\n",
     "har_X = pd.DataFrame({\n",
-    "    \"log1p_rvH\":  np.log1p(rvH.values),\n",
-    "    \"log1p_rv5H\": np.log1p(rv5H.values),\n",
-    "    \"log1p_rv21H\":np.log1p(rv21H.values)\n",
+    "    \"log1p_rvH\":   np.log1p(rvH.values),\n",
+    "    \"log1p_rv5H\":  np.log1p(rv5H.values),\n",
+    "    \"log1p_rv21H\": np.log1p(rv21H.values),\n",
     "}).fillna(0.0).astype(\"float32\")\n",
     "\n",
     "oof_har = np.full(len(har_X), np.nan, dtype=np.float32)\n",
@@ -1268,7 +1296,8 @@
     "    oof_har[te] = reg.predict(har_X.iloc[te]).astype(np.float32)\n",
     "\n",
     "msk_h = np.isfinite(oof_har)\n",
-    "r2_har = r2_score(y[msk_h], oof_har[msk_h]); ic_har = spearmanr(y[msk_h], oof_har[msk_h]).correlation\n",
+    "r2_har = r2_score(y[msk_h], oof_har[msk_h])\n",
+    "ic_har = spearmanr(y[msk_h], oof_har[msk_h]).correlation\n",
     "print(f\"[HAR] R²={r2_har:.3f} | IC={ic_har:.3f}\")"
    ]
   },
